--- a/js/mavatars.css
+++ b/js/mavatars.css
@@ -2,7 +2,7 @@
  * Base
  */
 
-.progress-pekeupload{
+.progress-mavatarsupload{
     
     width:100%;
     height:16px;
@@ -16,15 +16,15 @@
     box-shadow:inset 0px 2px 3px #bbb;    
 }
 
-.progress-pekeupload,
-.bar-pekeupload{
+.progress-mavatarsupload,
+.bar-mavatarsupload{
     border-radius:4px;
     -moz-border-radius:4px;
     -webkit-border-radius:4px;
     -o-border-radius:4px;
 }
 
-.bar-pekeupload{
+.bar-mavatarsupload{
     height:100%;
     background:#999;
     
@@ -48,7 +48,7 @@
     
     box-shadow:inset 0px 2px 8px rgba(255, 255, 255, .5), inset -1px -1px 0px rgba(0, 0, 0, .2);
 }
-.alert-pekeupload {
+.alert-mavatarsupload {
   padding: 8px 35px 8px 14px;
   margin-bottom: 20px;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
@@ -58,9 +58,7 @@
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
-   
-  border-color: ;
 }
-.alert-pekeupload .close{
+.alert-mavatarsupload .close{
     margin-top: 2px;
 }
