--- a/css/mavatars.css
+++ b/css/mavatars.css
@@ -2,29 +2,22 @@
  * Base
  */
 
-.progress-mavatarsupload{
+.mavatarsupload-progress{
     
     width:100%;
-    height:16px;
-    margin:0 auto 20px auto;
+    height:24px;
+    margin:0 auto 10px auto;
     padding:0px;
     
-    background:#cfcfcf;
-    border-width:1px;
-    border-style:solid;
-    border-color: #aaa #bbb #fff #bbb;    
-    box-shadow:inset 0px 2px 3px #bbb;    
+    background:#f4f4f4;
+    border: 1px solid #d4d4d4;    
+    box-shadow:inset 0px 2px 3px #bbb; 
+	border-radius:2px;    
 }
 
-.progress-mavatarsupload,
-.bar-mavatarsupload{
-    border-radius:4px;
-    -moz-border-radius:4px;
-    -webkit-border-radius:4px;
-    -o-border-radius:4px;
-}
-
-.bar-mavatarsupload{
+.mavatarsupload-bar{
+	
+	border-radius:2px; 
     height:100%;
     background:#999;
     
@@ -48,17 +41,17 @@
     
     box-shadow:inset 0px 2px 8px rgba(255, 255, 255, .5), inset -1px -1px 0px rgba(0, 0, 0, .2);
 }
-.alert-mavatarsupload {
+.mavatarsupload-bar span {padding: 5px 6px 3px; display: block; text-align: right;}
+
+.mavatarsupload-alert {
   padding: 8px 35px 8px 14px;
   margin-bottom: 20px;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
   color: #b94a48;
   background-color: #f2dede;
   border: 1px solid #eed3d7;
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
+  border-radius: 2px;
 }
-.alert-mavatarsupload .close{
+.mavatarsupload-alert .close{
     margin-top: 2px;
 }
